<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <ImageButton
        android:id="@+id/imageButtonImageEvent"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/newpic" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imageButtonImageEvent"
        android:ems="10"
        android:hint="@string/eventName" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/editTextEventName"
        android:ems="10"
        android:hint="@string/eventDescription" />
    

    <EditText
        android:id="@+id/editTextEventPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_below="@id/editTextEventDescription"
        android:ems="10"
        android:hint="@string/eventPlace" />

    <EditText
        android:id="@+id/editTextEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageButtonImageEvent"
        android:layout_below="@+id/editTextEventPlace"
        android:layout_marginLeft="48dp"
        android:ems="10"
        android:hint="@string/eventDate"
        android:layout_marginBottom="30dp"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonCreateEventNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_below="@+id/editTextEventDate"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="@string/next" />

    <ImageButton
        android:id="@+id/imageButtonPickCalendar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/editTextEventDate"
        android:layout_alignRight="@+id/editTextEventPlace"
        android:background="@drawable/calendar" />

</RelativeLayout>