<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/logindroid" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/green_droid" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextUser"
            android:layout_alignRight="@id/editTextUser"
            android:layout_below="@id/editTextUser"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorLink="@color/green_droid" />

        <CheckBox
            android:id="@+id/checkBoxLogged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextPassword"
            android:layout_alignRight="@id/editTextUser"
            android:layout_below="@id/editTextPassword"
            android:layout_marginBottom="15dp"
            android:text="@string/keepLogged" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextPassword"
            android:layout_alignRight="@id/editTextUser"
            android:layout_below="@+id/checkBoxLogged"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons_style"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextPassword"
            android:layout_alignRight="@id/editTextUser"
            android:layout_below="@+id/buttonLogin"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:text="@string/register"
            android:textColor="@color/green_droid" />
    </RelativeLayout>

</ScrollView>