<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewEventList"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewUpcomingEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcomingEvents" />

            <ExpandableListView
                android:id="@+id/expandableListViewUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ExpandableListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewClosedEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closedEvents" />

            <ExpandableListView
                android:id="@+id/expandableListViewClosedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ExpandableListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewPendingEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendingEvents" />

            <ExpandableListView
                android:id="@+id/expandableListViewPendingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ExpandableListView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButtonNewEvent"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_add" />

        <Button
            android:id="@+id/buttonToEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EventActivity" />

    </LinearLayout>

</ScrollView>